--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,11 +5,11 @@ Name Name:
   uri         : "https://chuyunye.github.io"
   email       : "cyye.emily@gmail.com"
   bio         : "This is Chuyun Ye, a Ph.D. student of statistics in Beijing Normal University."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "Photo_MD_1.jpg"
 
 
 Name2 Name2:
   name        : "Chuyun Ye"
   email       : "cyye.emily@gmail.com"
   bio         : "This is Chuyun Ye, a Ph.D. student of statistics in Beijing Normal University."
-  avatar      : "bio-photo.jpg"
+  avatar      : "Photo_MD_1.jpg"
